# audio-dsp

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  audio_mixer_p4.ino  build.sh  platformio.ini  sdkconfig.defaults
.github/workflows/: build.yml
components/yummydsp/: AudioDriver.cpp  AudioDriver.h  CMakeLists.txt
components/yummydsp/Nodes/: WaveShaperNode.cpp
firmware/: README.txt
firmware/debug/: README.txt
firmware/release/: README.txt
libraries/YummyDSP/src/: AudioDriver.cpp  AudioDriver.h
main/: CMakeLists.txt  audio_mixer_p4.cpp  global_vars.cpp  global_vars.h  serial_cmd.h  settings.h  web_server.cpp  web_server.h
src/: DualCompressor.h  global_vars.h  serial_cmd.h  settings.h
